update frontend styles and components for improved responsiveness and UI consistency